components/policies/development/konflux-rbac/konflux-support-nslister-access/.chainsaw-test/resources/group-with-users.yaml
apiVersion: user.openshift.io/v1
kind: Group
metadata:
  name: konflux-support
users:
  - alice
  - bob
  - charlie
